--- a/preview.html
+++ b/preview.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rocket Catalog Theme Preview</title>
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%20100%20100'%3E%3Ctext%20y%3D'.9em'%20font-size%3D'90'%3E%F0%9F%8F%86%3C%2Ftext%3E%3C%2Fsvg%3E">
-  <link rel="stylesheet" href="/Rocket-Catalog/theme/assets/default-main.css" />
-  <link rel="stylesheet" href="/Rocket-Catalog/theme/assets/custom-main.css" />
+  <link rel="stylesheet" href="theme/assets/default-main.css" />
+  <link rel="stylesheet" href="theme/assets/custom-main.css" />
 </head>
 <body>
   <!-- Optional top banner -->
@@ -60,6 +60,6 @@
     </div>
   </footer>
 
-  <script src="/Rocket-Catalog/theme/assets/sitewide.js"></script>
+  <script src="theme/assets/sitewide.js"></script>
 </body>
 </html>
