Fix 404 return link

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <main style="max-width:720px;margin:10vh auto;padding:1rem;text-align:center">
     <h1>Oops—page not found</h1>
     <p>The link may be outdated or the page moved.</p>
-    <p><a href="/">Return to the catalog</a></p>
+    <p><a href="./">Return to the catalog</a></p>
   </main>
 </body>
 </html>
