--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </div>
   </header>
 
-  <main class="wrap catalog">
-    <div id="count" class="muted" style="padding:4px 2px 12px"></div>
-    <div id="cards"></div>
-  </main>
+<main class="wrap catalog">
+  <div id="count" class="muted" style="padding:4px 2px 12px"></div>
+  <div id="cards" class="card-grid"></div>
+</main>
 
   <section id="detail" class="detail">
     <div class="overlay" id="detail-overlay"></div>
