--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <main class="wrap catalog">
   <div id="count" class="muted" style="padding:4px 2px 12px"></div>
-  <div id="cards" class="card-grid"></div>
+  <div id="cards"></div>
 </main>
 
   <section id="detail" class="detail">
